feat: add VehicleService method to retrieve vehicles for current customer; update ChatService to include userId in headers for requests